[gd_scene load_steps=7 format=1]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://images/dancer.png" type="Texture" id=2]
[ext_resource path="res://scripts/intro_level.gd" type="Script" id=3]
[ext_resource path="res://fonts/dialogue.tres" type="DynamicFont" id=4]

[sub_resource type="Animation" id=1]

resource/name = "camera_scroll"
length = 4.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 4 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -50.3338, 250.309 ), Vector2( 1265.15, 250.309 ) ]
}

[sub_resource type="Animation" id=2]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="Node" type="Node"]

script/script = ExtResource( 1 )
guess_timout = 0.1

[node name="main_camera" type="Camera2D" parent="."]

transform/pos = Vector2( 511.74, 299.613 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="scroll_camera" type="Camera2D" parent="."]

transform/pos = Vector2( 696.406, 250.309 )
anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 0.5, 0.5 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="AnimationPlayer" type="AnimationPlayer" parent="scroll_camera"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/camera_scroll = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "camera_scroll"

[node name="main_character" type="Node" parent="."]

[node name="Sprite" type="Sprite" parent="main_character"]

transform/pos = Vector2( 199.497, 271.469 )
transform/scale = Vector2( 5, 5 )
texture = ExtResource( 2 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="main_character"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/character_idle = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "character_idle"

[node name="temp_opp" type="Node" parent="."]

[node name="Sprite" type="Sprite" parent="temp_opp"]

transform/pos = Vector2( 806.224, 272.829 )
transform/scale = Vector2( 5, 5 )
texture = ExtResource( 2 )
flip_h = true
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="temp_opp"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/character_idle = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "character_idle"

[node name="levels" type="Node" parent="."]

[node name="intro_level" type="Node" parent="levels"]

script/script = ExtResource( 3 )

[node name="guess_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="dialogue_text" type="RichTextLabel" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 79.0
margin/top = 282.0
margin/right = 962.0
margin/bottom = 560.0
custom_fonts/normal_font = ExtResource( 4 )
bbcode/enabled = false
bbcode/bbcode = "Test"
visible_characters = -1
percent_visible = 1.0


